--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,16 @@
 {
-  "plugins": ["prettier-plugin-go-template"],
+  "plugins": [
+      "prettier-plugin-go-template",
+      "prettier-plugin-tailwindcss"
+  ],
   "overrides": [
-    {
-      "files": ["*.html"],
-      "options": {
-        "parser": "go-template"
+      {
+          "files": [
+              "*.html"
+          ],
+          "options": {
+              "parser": "go-template"
+          }
       }
-    }
   ]
 }
