--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -137,9 +137,9 @@ params:
   defaultTheme: auto # dark, light
   
   related:
-    show: true
+    show: true # 関連コンテンツを表示する (default: true)
     limit: 10 # 関連コンテンツを最大 N件まで表示 (default: 5)
-
+  
   disableThemeToggle: false
   ShowReadingTime: false
 
