--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -1,5 +1,4 @@
-# baseURL: "https://14katsumix.com/
-baseURL: "https://14katsumix.github.io/tech-blog/"
+baseURL: "https://14jcjc.github.io/tech-blog/"
 title: katsuのブログ
 # copyright: '&copy; katsu · [Privacy Policy]({{< ref "privacy" >}})'
 pagination:
