--- a/config/development/hugo.yaml
+++ b/config/development/hugo.yaml
@@ -1,3 +1,5 @@
+baseURL: "http://localhost:1313/tech-blog/"
+
 # permalinks を設定すると, パンクズリストがきちんと表示されなくなる.
 #-> /themes/PaperMod/layouts/partials/breadcrumbs.html を修正することで解決.
 #   https://github.com/adityatelange/hugo-PaperMod/issues/1585
