--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -229,13 +229,13 @@ params:
     # Title: "Hi there \U0001F44B"
     Title: "14katsumix"
     Content: >
-      R言語好きのデータサイエンティストです👨‍💻
+      R言語好きのエンジニアです👨‍💻
       
       {{% comment %}} 
       データ分析やプログラミングの楽しさを共有することをモットーに、日々成長中✨
       {{% /comment %}} 
       
-      ブログでは R と SQL を中心に、『📘 データサイエンス100本ノック（構造化データ加工編）』をベースにした問題解説やオリジナル問題を発信中✨
+      ブログでは R と SQL を中心に、『📘データサイエンス100本ノック（構造化データ加工編）』をベースにした問題解説やオリジナル問題を発信中✨
       
       {{% comment %}}
       RとSQLを中心に、初心者から上級者まで楽しめるコンテンツをお届けします🚀
