--- a/data/k100/questions.yaml
+++ b/data/k100/questions.yaml
@@ -1,24 +1,25 @@
 standard: 
-  - id: "R-003"
+  - id: "R-901"
     difficulty: 2
     text: |
-      R-003
-
-      この問題は**データフレームの結合**に関するものです。次の条件を満たすSQLコードを作成してください。
+      R-901  
+      この問題は**データフレームの結合**に関するものです。
+      
+      次の条件を満たすSQLコードを作成してください。
       - 条件A
       - 条件B
-  - id: "R-004"
+  - id: "R-902"
     difficulty: 3
     text: |
-      R-004  
+      R-902  
       この問題は**特定のデータ型変換**に関するものです。次の条件を満たすコードを書いてください。
       1. 条件X
       2. 条件Y
 advanced: 
-  - id: "A-001"
+  - id: "A-901"
     difficulty: 5
     text: |
-      A-001  
+      A-901  
       この問題は**データフレームの結合**に関するものです。次の条件を満たすSQLコードを作成してください。
       1. 条件A
       2. 条件B
