--- a/data/k100/questions.yaml
+++ b/data/k100/questions.yaml
@@ -1,6 +1,6 @@
 standard: 
   - id: "R-901"
-    difficulty: 2
+    difficulty: 1
     text: |
       R-901  
       この問題は**データフレームの結合**に関するものです。
@@ -9,9 +9,20 @@ standard:
       - 条件A
       - 条件B
   - id: "R-902"
+    difficulty: 2
+    text: |
+      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
+      R-902：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
+  - id: "R-903"
     difficulty: 3
     text: |
-      R-902 この問題は**特定のデータ型変換**に関するものです。次の条件を満たすコードを書いてください。
+      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
+      R-903：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
+  - id: "R-904"
+    difficulty: 4
+    text: |
+      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
+      R-904：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
 advanced: 
   - id: "A-901"
     difficulty: 5
@@ -20,3 +31,13 @@ advanced:
       この問題は**データフレームの結合**に関するものです。次の条件を満たすSQLコードを作成してください。
       1. 条件A
       2. 条件B
+  - id: "A-902"
+    difficulty: 1
+    text: |
+      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
+      A-902：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
+  - id: "A-903"
+    difficulty: 1
+    text: |
+      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
+      A-903：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
