--- a/data/k100/questions.yaml
+++ b/data/k100/questions.yaml
@@ -2,8 +2,7 @@ standard:
   - id: "R-901"
     difficulty: 1
     text: |
-      R-901  
-      この問題は**データフレームの結合**に関するものです。
+      R-901-この問題は**データフレームの結合**に関するものです。
       
       次の条件を満たすSQLコードを作成してください。
       - 条件A
