--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -50,18 +50,28 @@ params:
 
 menus:
   main:
-    - name: Archive
-      url: archives
+    - name: "[R+SQL] 演習問題"
+      url: "100k/q-list"
       weight: 10
+    - name: レビュー
+      url: "categories/%E3%83%AC%E3%83%93%E3%83%A5%E3%83%BC/"
+      weight: 15
     - name: Tags
+    # - name: タグ
       url: tags
       weight: 20
-    - name: Categories
-      url: categories
-      weight: 25
-    - name: Search
-      url: search
+    - name: Archive
+    # - name: アーカイブ
+      url: archives
       weight: 30
+    - name: Search
+    # - name: 検索
+      url: search
+      weight: 40
+    # - name: Categories
+    # - name: カテゴリー
+      # url: categories
+      # weight: 50
     - name: "データサイエンス100本ノック＋α"
       url: ds-100knocks-dp
       weight: 35
