--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -316,7 +316,7 @@ taxonomies:
 menu:
   main:
     - name: "[R+SQL] 演習問題"
-      url: "test/100k/q-list"
+      url: "test/100k/common/q-list"
       weight: 10
     - name: レビュー
       url: "categories/%E3%83%AC%E3%83%93%E3%83%A5%E3%83%BC/"
