--- a/data/k100/questions.yaml
+++ b/data/k100/questions.yaml
@@ -1,43 +1,71 @@
 standard: 
-  - id: "R-903"
-    difficulty: 3
-    text: |
-      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
-      R-903：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
   - id: "R-901"
-    difficulty: 2
-    text: |
-      R-901-この問題は**データフレームの結合**に関するものです。
-      
-      次の条件を満たすSQLコードを作成してください。
-      - 条件A
-      - 条件B
-  - id: "R-904"
     difficulty: 3
+    title: "最新の購入日を取得"
     text: |
-      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
-      R-904：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
+      `R-901`: 各顧客の**最新の購入日**を取得してください。結果は顧客IDと最新の購入日を含むデータフレームまたはテーブルとして出力してください。
+
   - id: "R-902"
     difficulty: 5
+    title: "売上データの集計"
     text: |
-      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
-      R-902：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
-advanced: 
-  - id: "A-903"
+      `R-902`: 売上データから、各商品の**月ごとの売上合計**を計算してください。結果は商品IDと月ごとの売上合計を含むデータフレームまたはテーブルとして出力してください。
+
+  - id: "R-903"
     difficulty: 1
+    title: "顧客の購入回数分析"
     text: |
-      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
-      A-903：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
-  - id: "A-902"
+      `R-903`: 顧客ごとの**購入回数**を集計し、購入回数が多い順に並べてください。購入回数が同じ場合は**顧客IDの昇順**で並べてください。
+
+  - id: "R-904"
     difficulty: 4
+    title: "欠損値の補完"
     text: |
-      ああああああああああああ、いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
-      A-902：この演習問題は**特定のデータ型変換**に関するもので R-029を発展させた問題です。次の条件を満たすコードを書いてください。
-  - id: "A-901"
+      R-904: 顧客データの**年齢列にある欠損値**を補完してください。補完方法は、**同じ地域の顧客の平均年齢**を用いるものとします。
+
+  - id: "R-905"
     difficulty: 2
+    title: "売上トップNの商品"
     text: |
-      A-901  
-      この問題は**データフレームの結合**に関するものです。次の条件を満たすSQLコードを作成してください。
-      1. 条件A
-      2. 条件B
-  
+      R-905: 全商品の**売上合計**を計算し、売上が高い順に**上位5つの商品**を取得してください。売上が同じ場合は**商品IDの昇順**で並べてください。
+
+advanced: 
+  - id: "A-901"
+    difficulty: 4
+    title: "最新の購入日を取得"
+    text: |
+      `A-901`: この問題は**データフレームの結合**に関するものです。次の条件を満たすコードを作成してください。
+      - 各顧客の最新の購入日を取得する
+      - 結果を顧客IDと最新の購入日を含むデータフレームとして出力する
+
+  - id: "A-902"
+    difficulty: 2
+    title: "時間帯別の注文数"
+    text: |
+      `A-902`: 注文データを基に、1日の**各時間帯 (0時〜23時) の注文数**を集計してください。さらに、以下の条件を満たすようにしてください。
+      1. **時間帯ごとの注文数の割合**を算出する
+      2. 結果を**時間ごとに昇順**で並べる
+
+  - id: "A-903"
+    difficulty: 5
+    title: "商品ごとのリピート率"
+    text: |
+      `A-903`: 各商品について、一度購入した後に**再度購入した顧客の割合 (リピート率)** を計算してください。リピート率の高い順に並べ、以下の条件を満たしてください。
+      - 購入履歴データを用いる
+      - 顧客単位でリピートの有無を判定する
+
+  - id: "A-904"
+    difficulty: 1
+    title: "異常値の検出"
+    text: |
+      A-904: 売上データにおいて、**各商品の販売数の中央値から大きく外れている異常値 (中央値の3倍以上)** を検出してください。さらに、次の条件を満たしてください。
+      1. 異常値を含む商品のIDを取得する
+      2. 検出結果をデータフレームとして出力する
+
+  - id: "A-905"
+    difficulty: 3
+    title: "新規顧客の割合"
+    text: |
+      A-905: 全購入データを基に、特定の期間 (例: 過去3か月) に**初めて購入した新規顧客の割合**を計算してください。次の条件を満たしてください。
+      1. 新規顧客の判定基準を**最初の購入日**とする
+      2. 期間内の総顧客数に対する割合を算出する
