--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -33,8 +33,8 @@ k100:
     #   title: "データサイエンス100本ノック～構造化データ加工編ガイドブック"
 
 products: 
-  ds100kDp: 
-    name: "データサイエンス100本ノック～構造化データ加工編ガイドブック"
+  ds100kdp: 
+    name: "データサイエンス100本ノック 構造化データ加工編ガイドブック"
     # platformsリストの順序で出力する (リストに無い項目は対象外)
     platforms: 
       - amazon
