--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -225,12 +225,18 @@ params:
     imageHeight: 200
     buttons:
       - name: "データサイエンス100本ノック＋α - test"
-        url: ds-100knocks-dp-test
+        # url: ds-100knocks-dp-test
+        url: test/100k
       - name: XXX
-        url: xxx
+        # url: xxx
+        url: test/xxx
       - name: Tags
         url: tags
-  
+      - name: Archives
+        url: archives
+      - name: Github
+        url: "https://github.com/14katsumix/100knocks-dp"
+    
   # home-info mode
   homeInfoParams:
     # Title: "Hi there \U0001F44B"
@@ -319,7 +325,7 @@ menu:
   main:
     - name: "[R+SQL] 演習問題"
       # url: "test/100k/common/q-list"
-      url: "test/100k/base/q-list"
+      url: "test/100k/base/q-list-test"
       weight: 10
     - name: レビュー
       url: "categories/%E3%83%AC%E3%83%93%E3%83%A5%E3%83%BC/"
