--- a/config/development/hugo.yaml
+++ b/config/development/hugo.yaml
@@ -1,4 +1,4 @@
-# baseURL: "http://localhost:1313/tech-blog/"
+# baseURL: "http://localhost:1313/tech-blog-2/"
 
 # permalinks を設定すると, パンクズリストがきちんと表示されなくなる.
 #-> /themes/PaperMod/layouts/partials/breadcrumbs.html を修正することで解決.
