--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -1,8 +1,8 @@
 baseURL: "https://14jcjc.github.io/tech-blog-2/"
 
 # Include drafts when building.
-buildDrafts: false
-# buildDrafts: true
+# buildDrafts: false
+buildDrafts: true
 
 # enableRobotsTXT: true # robots.txt の生成を有効にする
 enableRobotsTXT: false
